--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="assets/css/plugins/slick-slider.css">
   <link rel="stylesheet" href="assets/css/plugins/nice-select.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 
   <!--=====  JS SCRIPT LINK =======-->
   <script src="assets/js/plugins/jquery-3-6-0.min.js"></script>
@@ -149,6 +150,23 @@
                 <ul>
                   <!-- Home -->
                   <li><a href="index.html">Home</a></li>
+                  <!-- Who We Serve: Custom Dropdown List -->
+                  <div class="service-type-dropdown">
+                    <span class="service-type-title">Who We Serve</span>
+                    <ul class="service-type-list">
+                      <li><a href="real-estate.html"> Real State</a></li>
+                      <li><a href="construction.html"> Construction</a></li>
+                      <li><a href="tech.html"> Tech Support</a></li>
+                      <li><a href="automotive.html"> Automotive</a></li>
+                      <li><a href="transportation-delivery.html"> Transportation and Delivery</a></li>
+                      <li><a href="service-maintenance.html">Home Services and Maintenance</a></li>
+                      <li><a href="utility.html"> Utilities</a></li>
+                      <li><a href="food.html"> Food Industry</a></li>
+                      <li><a href="health.html"> Health and Safety</a></li>
+
+
+                    </ul>
+                  </div>
 
                   <!-- About Us -->
                   <li><a href="about.html">About Us</a></li>
@@ -161,21 +179,20 @@
 
                 </ul>
               </div>
-
               <div class="btn-area">
                 <button class="header-btn1" id="open-calendar">
                   Appointment
                 </button>
               </div>
+
               <div class="btn-area">
                 <a href="terms-of-service.html" class="header-btn1">Packages</a>
+                <div class="dropdown">
+                  <a href="additional.html" class="header-btn1">Packages+</a>
+                  <a href="aggrement.html" class="header-btn1">À la carte</a>
+                </div>
               </div>
-              <div class="btn-area">
-                <a href="additional.html" class="header-btn1">Packages+</a>
-              </div>
-              <div class="btn-area">
-                <a href="aggrement.html" class="header-btn1">À la carte</a>
-              </div>
+
               <div class="btn-area">
                 <div class="header-contact">+1(800)694-1673</div>
               </div>
