--- a/automotive.html
+++ b/automotive.html
@@ -343,23 +343,18 @@
                             <div class="content">
                                 <a href="case.html">Success in Automotive</a>
                                 <p>
-                                    Marketing is essential for artists because it enables them to reach wider audiences,
-                                    build a loyal fan base, and drive
-                                    the success of their music. In today’s digital landscape, effective marketing helps
-                                    artists stand out by using various
-                                    platforms—social media, streaming services, and online communities—to connect with
-                                    listeners worldwide. Strategic
-                                    marketing allows artists to share their unique stories, communicate their
-                                    personalities, and create a deeper connection
-                                    with fans, making their music feel personal and relatable. By sharing insights into
-                                    their creative process, offering
-                                    previews of new songs, and providing fans with exclusive behind-the-scenes moments,
-                                    artists can generate excitement
-                                    and loyalty. Additionally, successful marketing increases the chances for artists to
-                                    be discovered by new audiences,
-                                    influencers, and industry professionals who can help amplify their work and open
-                                    doors to new collaborations, live
-                                    performances, and career opportunities.
+                                    we excel in enhancing the visibility and growth of businesses in the automotive
+                                    service industry. Our portfolio includes auto repair and maintenance shops, auto
+                                    body and collision repair, tire service and repair, car detailing, towing services,
+                                    and diesel mechanics. We craft tailored marketing strategies that highlight the
+                                    reliability and expertise of our clients, ensuring their unique strengths are
+                                    showcased. From creating informative content that underscores the precision and care
+                                    of our auto repair and maintenance professionals, to designing engaging campaigns
+                                    that emphasize the efficiency and thoroughness of our car detailing experts, Prime
+                                    Solutions Marketing is dedicated to driving growth and success for businesses that
+                                    keep our vehicles running smoothly and looking great. We understand the intricacies
+                                    of these services and are committed to helping our clients stand out in a
+                                    competitive market.
                                 </p>
                             </div>
 
@@ -376,12 +371,12 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="img1 image-anime">
                                     <div class="space100"></div>
-                                    <img src="assets/img/all-images/artist-1.jpg" alt="">
+                                    <img src="assets/img/all-images/auto-1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="img2 image-anime">
-                                    <img src="assets/img/all-images/artist-2.jpg" alt="">
+                                    <img src="assets/img/all-images/auto-2.jpg" alt="">
                                 </div>
                             </div>
                         </div>
