--- a/construction.html
+++ b/construction.html
@@ -344,23 +344,17 @@
                             <div class="content">
                                 <a href="case.html">Success in Construction</a>
                                 <p>
-                                    Marketing is essential for artists because it enables them to reach wider audiences,
-                                    build a loyal fan base, and drive
-                                    the success of their music. In today’s digital landscape, effective marketing helps
-                                    artists stand out by using various
-                                    platforms—social media, streaming services, and online communities—to connect with
-                                    listeners worldwide. Strategic
-                                    marketing allows artists to share their unique stories, communicate their
-                                    personalities, and create a deeper connection
-                                    with fans, making their music feel personal and relatable. By sharing insights into
-                                    their creative process, offering
-                                    previews of new songs, and providing fans with exclusive behind-the-scenes moments,
-                                    artists can generate excitement
-                                    and loyalty. Additionally, successful marketing increases the chances for artists to
-                                    be discovered by new audiences,
-                                    influencers, and industry professionals who can help amplify their work and open
-                                    doors to new collaborations, live
-                                    performances, and career opportunities.
+                                    we specialize in elevating businesses in essential service industries. Our expertise
+                                    spans across plumbing services, electrical contracting, HVAC (heating, ventilation,
+                                    and air conditioning), and landscaping and lawn care. We understand the unique
+                                    challenges and opportunities within these sectors, and we tailor our marketing
+                                    strategies to highlight the strengths and reliability of our clients. Whether it's
+                                    crafting compelling content that showcases the precision and expertise of our
+                                    electrical contractors, designing eye-catching campaigns that emphasize the
+                                    efficiency and comfort provided by our HVAC specialists, or creating engaging
+                                    visuals that capture the beauty and meticulous care of our landscaping and lawn care
+                                    professionals, Prime Solutions Marketing is dedicated to driving growth and success
+                                    for businesses that keep our communities running smoothly.
                                 </p>
                             </div>
 
@@ -377,12 +371,12 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="img1 image-anime">
                                     <div class="space100"></div>
-                                    <img src="assets/img/all-images/artist-1.jpg" alt="">
+                                    <img src="assets/img/all-images/construction-1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="img2 image-anime">
-                                    <img src="assets/img/all-images/artist-2.jpg" alt="">
+                                    <img src="assets/img/all-images/transport-2.jpg" alt="">
                                 </div>
                             </div>
                         </div>
