--- a/transportation-delivery.html
+++ b/transportation-delivery.html
@@ -345,23 +345,18 @@
                             <div class="content">
                                 <a href="case.html">Success in Transportation and Delivery</a>
                                 <p>
-                                    Marketing is essential for artists because it enables them to reach wider audiences,
-                                    build a loyal fan base, and drive
-                                    the success of their music. In today’s digital landscape, effective marketing helps
-                                    artists stand out by using various
-                                    platforms—social media, streaming services, and online communities—to connect with
-                                    listeners worldwide. Strategic
-                                    marketing allows artists to share their unique stories, communicate their
-                                    personalities, and create a deeper connection
-                                    with fans, making their music feel personal and relatable. By sharing insights into
-                                    their creative process, offering
-                                    previews of new songs, and providing fans with exclusive behind-the-scenes moments,
-                                    artists can generate excitement
-                                    and loyalty. Additionally, successful marketing increases the chances for artists to
-                                    be discovered by new audiences,
-                                    influencers, and industry professionals who can help amplify their work and open
-                                    doors to new collaborations, live
-                                    performances, and career opportunities.
+                                    we specialize in promoting businesses within the transportation and delivery
+                                    industry. Our expertise encompasses trucking and freight hauling, delivery services,
+                                    moving services, and more. We understand the critical role these services play in
+                                    keeping goods and people moving efficiently. Our tailored marketing strategies
+                                    highlight the reliability and timeliness of our clients' operations. From crafting
+                                    compelling content that emphasizes the professionalism and precision of our trucking
+                                    and freight hauling partners, to designing engaging campaigns that showcase the
+                                    swift and dependable nature of our delivery and moving services, Prime Solutions
+                                    Marketing is dedicated to driving growth and success for businesses that keep the
+                                    world connected and on the move. We are committed to helping our clients stand out
+                                    in a competitive market by showcasing their strengths and ensuring they reach their
+                                    target audience effectively.
                                 </p>
                             </div>
 
@@ -378,12 +373,12 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="img1 image-anime">
                                     <div class="space100"></div>
-                                    <img src="assets/img/all-images/artist-1.jpg" alt="">
+                                    <img src="assets/img/all-images/transport-1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="img2 image-anime">
-                                    <img src="assets/img/all-images/artist-2.jpg" alt="">
+                                    <img src="assets/img/all-images/transport-3.jpg" alt="">
                                 </div>
                             </div>
                         </div>
