--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -255,7 +255,7 @@
     <!--===== MOBILE HEADER ENDS =======-->
 
     <!-- Terms Content -->
-    <div class="container my-5">
+    <div class="container my-5 package-top">
         <h1 class="text-center mb-4">Blue Collar Marketing Packages</h1>
 
         <h3 class="mt-4">Service Packages</h3>
