changed the text

--- a/food.html
+++ b/food.html
@@ -342,25 +342,25 @@
                                 <img src="assets/img/icons/artist.png" alt="">
                             </div>
                             <div class="content">
-                                <a href="case.html">Success in Food Industry</a>
+                                <a href="case.html">food industry</a>
                                 <p>
-                                    Marketing is essential for artists because it enables them to reach wider audiences,
-                                    build a loyal fan base, and drive
-                                    the success of their music. In today’s digital landscape, effective marketing helps
-                                    artists stand out by using various
-                                    platforms—social media, streaming services, and online communities—to connect with
-                                    listeners worldwide. Strategic
-                                    marketing allows artists to share their unique stories, communicate their
-                                    personalities, and create a deeper connection
-                                    with fans, making their music feel personal and relatable. By sharing insights into
-                                    their creative process, offering
-                                    previews of new songs, and providing fans with exclusive behind-the-scenes moments,
-                                    artists can generate excitement
-                                    and loyalty. Additionally, successful marketing increases the chances for artists to
-                                    be discovered by new audiences,
-                                    influencers, and industry professionals who can help amplify their work and open
-                                    doors to new collaborations, live
-                                    performances, and career opportunities.
+                                    food industry
+
+                                    we specialize in promoting businesses within the diverse and 
+                                    dynamic food service industry. Our expertise includes catering
+                                     services, food truck operations, commercial kitchen operation 
+                                     or food production, restaurant or bar maintenance and repairs,
+                                      and butchery or meat processing. We tailor our marketing strategies
+                                       to highlight the quality, professionalism, and unique offerings of
+                                        our clients. From crafting compelling content that showcases the 
+                                        delicious and meticulously prepared dishes of our catering partners
+                                         to designing engaging campaigns that emphasize the convenience and culinary 
+                                         creativity of our food truck operators, Prime Solutions Marketing ensures 
+                                         that our clients' strengths are front and center. We also focus on the precision
+                                          and reliability of commercial kitchen operations, the essential maintenance 
+                                          and repairs for restaurants and bars, and the expertise in butchery and
+                                           meat processing. Our goal is to drive growth and success for businesses that
+                                            nourish and delight their communities.
                                 </p>
                             </div>
 
