--- a/service-maintenance.html
+++ b/service-maintenance.html
@@ -343,25 +343,23 @@
                                 <img src="assets/img/icons/artist.png" alt="">
                             </div>
                             <div class="content">
-                                <a href="case.html">Success in Home Services and Maintenance</a>
+                                <a href="case.html">Home services and maintenance</a>
                                 <p>
-                                    Marketing is essential for artists because it enables them to reach wider audiences,
-                                    build a loyal fan base, and drive
-                                    the success of their music. In today’s digital landscape, effective marketing helps
-                                    artists stand out by using various
-                                    platforms—social media, streaming services, and online communities—to connect with
-                                    listeners worldwide. Strategic
-                                    marketing allows artists to share their unique stories, communicate their
-                                    personalities, and create a deeper connection
-                                    with fans, making their music feel personal and relatable. By sharing insights into
-                                    their creative process, offering
-                                    previews of new songs, and providing fans with exclusive behind-the-scenes moments,
-                                    artists can generate excitement
-                                    and loyalty. Additionally, successful marketing increases the chances for artists to
-                                    be discovered by new audiences,
-                                    influencers, and industry professionals who can help amplify their work and open
-                                    doors to new collaborations, live
-                                    performances, and career opportunities.
+                                    
+
+            Prime Solutions Marketing, we are dedicated to enhancing the reach and reputation of 
+            businesses in essential home and property services. Our expertise covers pest control,
+             house cleaning and janitorial services, appliance repair, painting services, flooring,
+              and pool maintenance and cleaning. We create customized marketing strategies that highlight
+               the professionalism and reliability of our clients. Whether it's developing engaging
+                content that showcases the thoroughness and effectiveness of our pest control specialists,
+                 crafting campaigns that emphasize the meticulous care of our house cleaning and 
+                 janitorial teams, or promoting the expertise of our appliance repair technicians, 
+                 Prime Solutions Marketing ensures that our clients' strengths are showcased effectively.
+                  From highlighting the precision of our painting professionals to the quality
+                   craftsmanship of our flooring experts and the impeccable upkeep provided by our pool 
+                   maintenance crews, we are committed to driving growth and success for businesses that
+                    keep our homes and properties in top condition.
                                 </p>
                             </div>
 
