--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -707,8 +707,8 @@ The Blue Collar Marketing Team`;
                         },
                         body: JSON.stringify({
                             to: email1,
-                            // subject,
-                            // text:info,
+                            subject,
+                            text: info,
                         }),
                     })
                         .then(response => response.json())
